--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -57,9 +57,7 @@ aliases:
 		<div class="col-sm-6">
       <h2>Cummins&reg; R2.8 Repower for Jeeps - Taking Orders Now!</h2>&nbsp;
       <p>
-Bruiser Conversions worked diligently under the Cummins® BETA customer program to develop a variety of adapters and installation components for the R2.8 Turbo Diesel crate engine.  As the leader in engine conversions for the Jeep Wrangler, Bruiser Conversions now offers fully integrated engine conversion packages and builder’s parts for the Jeep JK, TJ, YJ, and CJ. We will continue to engineer additional engine integration components and intend to expand our parts availability beyond the Jeep brand of vehicles in the future, your continued feedback will help to guide our team in the proper direction for the makes and models chosen for our research and development program.
-
-      </p>
+Bruiser Conversions worked diligently under the Cummins&amp;reg; BETA customer program to develop a variety of adapters and installation components for the R2.8 Turbo Diesel crate engine.  As the leader in engine conversions for the Jeep Wrangler, Bruiser Conversions now offers fully integrated engine conversion packages and builder's parts for the Jeep JK, TJ, YJ, and CJ. We will continue to engineer additional engine integration components and intend to expand our parts availability beyond the Jeep brand of vehicles in the future, your continued feedback will help to guide our team in the proper direction for the makes and models chosen for our research and development program. </p>
       
     </div>
 
@@ -175,10 +173,9 @@ Bruiser Conversions worked diligently under the Cummins® BETA customer program 
 		<div class="container">
     <div class="row">
       <div class="col-sm-15 p-t-2">
-      For the Do-It-Yourself crowd, we are also releasing a complete line of engine installation parts and a series of adapters to mate the Cummins® R2.8 Turbo Diesel with certain models of stock Jeep transmissions.
+      For the Do-It-Yourself crowd, we are also releasing a complete line of engine installation parts and a series of adapters to mate the Cummins&amp;reg; R2.8 Turbo Diesel with certain models of stock Jeep transmissions. <br>
      <br>
-     <br>
-     <h2>These Do-It-Yourself builder’s parts are available through Bruiser Conversions:</h2>
+     <h2>These Do-It-Yourself builder's parts are available through Bruiser Conversions:</h2>
 		
     </div>
  
@@ -313,8 +310,9 @@ Bruiser Conversions worked diligently under the Cummins® BETA customer program 
           </tr>
           </table>
             
-		  <div class="row"><p><a href="/contact">Click Here</a> to submit your order for processing.</p>
-     <p>For additional Cummins® Repower information you may visit: <a href="https://cumminsengines.com/repower.aspx" target="_blank">Cummins® Repower</a>. Please read all emissions information for the desired part number prior to purchase. All Federal and State emissions laws apply. Kits are currently offered for off-road use only, it is the responsibility of the purchaser to comply with all laws pertaining to their vehicle.</p></div><br>
+		  <div class="row">
+     <p><a href="/contact">Click Here </a>to submit your order for processing.</p>
+     <p>For additional Cummins&reg; Repower information you may visit: <a href="https://cumminsengines.com/repower.aspx" target="_blank">Cummins&reg; Repower</a>. Please read all emissions information for the desired part number prior to purchase. All Federal and State emissions laws apply. Kits are currently offered for off-road use only, it is the responsibility of the purchaser to comply with all laws pertaining to their vehicle.</p></div><br>
       </div>
 			</div>
      </div>
