More Character Revisions

--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -57,7 +57,7 @@ aliases:
 		<div class="col-sm-6">
       <h2>Cummins&reg; R2.8 Repower for Jeeps - Taking Orders Now!</h2>&nbsp;
       <p>
-Bruiser Conversions worked diligently under the Cummins&amp;reg; BETA customer program to develop a variety of adapters and installation components for the R2.8 Turbo Diesel crate engine.  As the leader in engine conversions for the Jeep Wrangler, Bruiser Conversions now offers fully integrated engine conversion packages and builder's parts for the Jeep JK, TJ, YJ, and CJ. We will continue to engineer additional engine integration components and intend to expand our parts availability beyond the Jeep brand of vehicles in the future, your continued feedback will help to guide our team in the proper direction for the makes and models chosen for our research and development program. </p>
+Bruiser Conversions worked diligently under the Cummins&reg; BETA customer program to develop a variety of adapters and installation components for the R2.8 Turbo Diesel crate engine.  As the leader in engine conversions for the Jeep Wrangler, Bruiser Conversions now offers fully integrated engine conversion packages and builder's parts for the Jeep JK, TJ, YJ, and CJ. We will continue to engineer additional engine integration components and intend to expand our parts availability beyond the Jeep brand of vehicles in the future, your continued feedback will help to guide our team in the proper direction for the makes and models chosen for our research and development program. </p>
       
     </div>
 
@@ -173,7 +173,7 @@ Bruiser Conversions worked diligently under the Cummins&amp;reg; BETA customer p
 		<div class="container">
     <div class="row">
       <div class="col-sm-15 p-t-2">
-      For the Do-It-Yourself crowd, we are also releasing a complete line of engine installation parts and a series of adapters to mate the Cummins&amp;reg; R2.8 Turbo Diesel with certain models of stock Jeep transmissions. <br>
+      For the Do-It-Yourself crowd, we are also releasing a complete line of engine installation parts and a series of adapters to mate the Cummins&reg; R2.8 Turbo Diesel with certain models of stock Jeep transmissions. <br>
      <br>
      <h2>These Do-It-Yourself builder's parts are available through Bruiser Conversions:</h2>
 		
@@ -212,10 +212,11 @@ Bruiser Conversions worked diligently under the Cummins&amp;reg; BETA customer p
 	  </table>
 	  <br><br>
 		<div class="row"><h2>2007-2011 Jeep Wrangler JK and JKU</h2></div>
-	  <div class="row"><p>Early model Jeep Wrangler vehicles equipped with an automatic transmission will require an upgrade of the stock automatic transmission.  Bruiser Conversions has found through years of testing and development that the AW580/Nag1 transmission is the best available upgrade for the Jeep Wrangler platform.  Our factory integration enables us to use the same language to control the Nag1 as if it was factory installedmodules and includes all necessary components to achieve complete functionality of the NAG-1 transmission through your vehicle’s CAN system.  The NAG-1, in its factory form, is rated for 550 HP and 500 ft-lb of torque. This transmission has been utilized in many makes and models of performance vehicle including Mercedes, BMW, Porsche, Sprinter Vans, SRT Challengers, SRT Chargers, and SRT Grand Cherokees.</p>
-			<p>All Cummins® R2.8 Turbo Diesel conversions offered by Bruiser Conversions are fully integrated into the Wrangler’s factory systems to provide superior on and off-road performance. The Cummins® R2.8 engine produces 161 HP at 3600 RPM and 267 ft-lb of torque at 1500-3000 RPM out of the crate. If you’re looking for more power, please let your sales agent know when placing your order.</p>
-		<p>The Cummins® R2.8 Turbo Diesel is now available direct to the public.  The team at Bruiser Conversions can guide you through the ordering process, whether you’re in the market for a turn-key installation or a Do-It-Yourself parts kit we are here to support you throughout the entire process.</p>
-		  <p><a href="/contact">Click Here</a> to submit your contact and vehicle information to our sales team.</p>
+	  <div class="row">
+		<p>Early model Jeep Wrangler vehicles equipped with an automatic transmission will require an upgrade of the stock automatic transmission.  Bruiser Conversions has found through years of testing and development that the AW580/Nag1 transmission is the best available upgrade for the Jeep Wrangler platform.  Our factory integration enables us to use the same language to control the Nag1 as if it was factory installedmodules and includes all necessary components to achieve complete functionality of the NAG-1 transmission through your vehicle's CAN system.  The NAG-1, in its factory form, is rated for 550 HP and 500 ft-lb of torque. This transmission has been utilized in many makes and models of performance vehicle including Mercedes, BMW, Porsche, Sprinter Vans, SRT Challengers, SRT Chargers, and SRT Grand Cherokees.</p>
+			<p>All Cummins&reg; R2.8 Turbo Diesel conversions offered by Bruiser Conversions are fully integrated into the Wrangler's factory systems to provide superior on and off-road performance. The Cummins&reg; R2.8 engine produces 161 HP at 3600 RPM and 267 ft-lb of torque at 1500-3000 RPM out of the crate. If you're looking for more power, please let your sales agent know when placing your order.</p>
+		<p>The Cummins&reg; R2.8 Turbo Diesel is now available direct to the public.  The team at Bruiser Conversions can guide you through the ordering process, whether you're in the market for a turn-key installation or a Do-It-Yourself parts kit we are here to support you throughout the entire process.</p>
+		  <p><a href="/contact">Click Here</a> to submit your contact and vehicle information to our sales team.</p>
 		<br>
 		  </div>
 		  </div>
