--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Bruiser Conversions</title>
-<meta name="description" content="Bruiser Conversions">
+<meta name="description" content="">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -73,28 +73,17 @@
 </nav>
 
     
-  <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
+  
+           <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#home-carousel" data-slide-to="1"></li>
-    <li data-target="#home-carousel" data-slide-to="2"></li>
+
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-        <img src="images/SEMA.jpg" alt="Bruiser Conversions at SEMA" />
+        <img src="images/BarrettShow.jpg" alt="" />
     </div>
-   <div  class="carousel-item">
-      <a href="/jeep-ls-conversion">
-        <div class="title">LS Engine Conversion</div>
-        <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
-      </a>
-    </div>
-    <div class="carousel-item">
-      <a href="/jk-crew">
-        <div class="title">JK Crew Conversion</div>
-        <img src="images/jk-crew-conversion-005.jpg" alt="JK Crew Conversion" />
-      </a>
-    </div>
+
   </div>
   <a class="left carousel-control" href="#home-carousel" role="button" data-slide="prev">
     <span class="icon-prev" aria-hidden="true"></span>
@@ -124,7 +113,8 @@
     </div>
   </div>
 </div>
-
+ 
+  
 
     <div class="container-fluid footer">
     <div class="row">
@@ -146,7 +136,7 @@
     </div>
 
     <div class="copyright">
-      <p>&copy; 2012 - 2017 Bruiser Conversions. All Rights Reserved.</p>
+      <p>&copy; 2012 - 2018 Bruiser Conversions. All Rights Reserved.</p>
     </div>
   </div>
 
