--- a/content/index.html
+++ b/content/index.html
@@ -27,13 +27,21 @@ aliases:
 <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
-
+    <li data-target="#home-carousel" data-slide-to="1"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-        <img src="images/BarrettShow.jpg" alt="" />
+      <a href="/jeep-ls-conversion">
+        <div class="title">LS Engine Conversion</div>
+        <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
+      </a>
     </div>
-
+    <div class="carousel-item">
+      <a href="/jk-crew">
+        <div class="title">JK Crew Conversion</div>
+        <img src="images/jk-crew-conversion-005.jpg" alt="JK Crew Conversion" />
+      </a>
+    </div>
   </div>
   <a class="left carousel-control" href="#home-carousel" role="button" data-slide="prev">
     <span class="icon-prev" aria-hidden="true"></span>
