add barrett jackson to slider and fix frontmatter of index

--- a/content/index.html
+++ b/content/index.html
@@ -20,17 +20,21 @@ aliases:
     - /sale/
     - /bruiser-build-sheet/
     - /2014/05/22/announcing-3-8l-isf-wrangler-conversion/
-    
-
 ---
 
 <div id="home-carousel" class="carousel slide carousel-fade cover" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
     <li data-target="#home-carousel" data-slide-to="1"></li>
+    <li data-target="#home-carousel" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
+      <div class="title">Barrett Jackson</div>
+      <div class="subtitle">Jan 13th - Jan 21st, 2018</div>
+      <img src="images/1stSlider-12JAN18.jpg" alt="Barrett Jackson" />
+    </div>
+    <div class="carousel-item">
       <a href="/jeep-ls-conversion">
         <div class="title">LS Engine Conversion</div>
         <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
