Diesel Cummins Update

--- a/public/jeep-diesel-conversion/index.html
+++ b/public/jeep-diesel-conversion/index.html
@@ -212,7 +212,7 @@ Bruiser Conversions worked diligently under the Cummins&reg; BETA customer progr
             <td>4.0L/4.2L AMC I-6</td>
           </tr>
           <tr>
-            <td colspan="4">*Options may affect final conversion pricing</td>
+            <td colspan="4"><em>* Options may affect final conversion pricing<br>* Cummins&reg; R2.8 conversions for model year 2000 and up are intended for off road use only.</em></td>
           </tr>
         </table>
         <br>
