Add the JL Conversion page to the site

--- a/content/index.html
+++ b/content/index.html
@@ -30,9 +30,9 @@ aliases:
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <div class="title">Barrett Jackson</div>
-      <div class="subtitle">Jan 13th - Jan 21st, 2018</div>
-      <img src="images/1stSlider-12JAN18.jpg" alt="Barrett Jackson" />
+           <a href="/jeep-jl-conversion">
+      <div class="title">JL LS3 450 and 500 hp</div>
+      <img src="images/jeep-jl-engine-conversion-001.jpg" alt="Barrett Jackson" />
     </div>
     <div class="carousel-item">
       <a href="/jeep-ls-conversion">
