--- a/public/jeep-jl-conversion/_index.html
+++ b/public/jeep-jl-conversion/_index.html
@@ -1,82 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <title>Jeep JK Wrangler LS Conversions</title>
-<meta name="description" content="Jeep JK Wrangler LS Conversion Kit">
-<link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
-<link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
-<link rel="stylesheet" media="all" href="/css/application.css"/>
-<link rel="stylesheet" media="all" href="/css/galleria.twelve.min.css"/>
-
-<script src="/js/jquery.js"></script>
-<script src="/js/tether.js"></script>
-<script src="/js/bootstrap.js"></script>
-<script src="/js/galleria-1.5.5.min.js"></script>
-<script src="/js/galleria.twelve.min.js"></script>
-<script src="https://use.typekit.net/pbd5vfs.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-<script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
-<link href="//assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-51894707-6', 'auto');
-  ga('send', 'pageview');
-</script>
-
-  <body>
-    <nav class="navbar navbar-dark navbar-full bg-inverse">
-  <a href="/" class="navbar-brand">
-    <img src="/images/logo.png", class="logo" />
-  </a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item dropdown" >
-      <a class="nav-link dropdown-toggle" id="power-menu-link" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Power</a>
-
-      <div class="dropdown-menu" aria-labelledby="power-menu-link">
-        <h6 class="dropdown-header">Engine Conversions</h6>
-
-        <a href="/jeep-jl-conversion" class="dropdown-item">JL LS</a>
-        <a href="/jeep-ls-conversion" class="dropdown-item">JK LS</a>
-        <a href="/jeep-hemi-conversion" class="dropdown-item">Hemi</a>
-        <a href="/jeep-diesel-conversion" class="dropdown-item">Diesel</a>
-        <div class="dropdown-divider"></div>
-        <a href="/certified-installation-facilities" class="dropdown-item">Certified Installation Facilities</a>
-      </div>
-    </li>
-
-    <li class="nav-item dropdown" >
-      <a class="nav-link dropdown-toggle" id="power-menu-link" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Body</a>
-
-      <div class="dropdown-menu" aria-labelledby="power-menu-link">
-        <h6 class="dropdown-header">Wrangler Base (2-Door)</h6>
-        <a href="/super-cab" class="dropdown-item">Super Cab</a>
-        <div class="dropdown-divider"></div>
-        <h6 class="dropdown-header">Wrangler Unlimited Base (4-Door)</h6>
-        <a href="/jk-crew" class="dropdown-item">JK Crew</a>
-        <a href="/overlander" class="dropdown-item">Overlander</a>
-      </div>
-    </li>
-
-    <li class="nav-item pull-xs-right">
-      <a href="/contact", class="btn btn-outline-success btn-outline-brand">Contact</a>
-    </li>
-
-    <li class="nav-item">
-      <a href="/feed", class="nav-link">Feed</a>
-    </li>
-
-    <li class="nav-item">
-      <a href="/reviews", class="nav-link">Reviews</a>
-    </li>
-  </ul>
-</nav>
-
+---
+title: Jeep JL Wrangler LS Conversions
+description: Jeep JL Wrangler LS Conversion Kit
+aliases:
+    - /jeep-wrangler-ls-conversion-kit
+    - /jeep-wrangler-ls-conversions
+    - /jeep-wrangler-ls-conversion
+    - /pages/ls_conversions
+    - /jeep-wrangler-2007-2011-ls-conversions/
     
-  <div class="cover">
-  <h1>Jeep JK Wrangler LS Conversion</h1>
+---
+
+<div class="cover">
+  <h1>Jeep JL Wrangler LS Conversion</h1>
   <img src="/images/jeep-ls-engine-conversion-001.jpg" alt="Jeep Wrangler LS Conversion Kit" style='position: absolute; bottom: -75px;' />
 </div>
 
@@ -384,31 +319,3 @@
     </div>
   </div>
 </div>
-
-
-    <div class="container-fluid footer">
-    <div class="row">
-      <div class="col-sm-12 header m-t-2 m-b-2">
-        <span class="pull-xs-left">
-          <span class="cta">Experience it Yourself:</span>
-          <span>(727) 317-4902</span>
-          <span class="main-color">|</span>
-          <span><a href="/contact">Email</a></span>
-        </span>
-        <span class="pull-xs-right">
-          <div class="icons">
-            <a class="icon-link" href="https://www.facebook.com/bruiserconversions" target="_blank"><img src='/images/graphics/facebook.png' /></a>
-            <a class="icon-link" href="https://www.instagram.com/bruiserconversions/" target="_blank"><img src='/images/graphics/instagram.png' /></a>
-            <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='/images/graphics/youtube.png' /></a>
-          </div>
-        </span>
-      </div>
-    </div>
-
-    <div class="copyright">
-      <p>&copy; 2012 - 2018 Bruiser Conversions. All Rights Reserved.</p>
-    </div>
-  </div>
-
-  </body>
-</html>
