--- a/content/jeep-ls-conversion/_index.html
+++ b/content/jeep-ls-conversion/_index.html
@@ -43,7 +43,7 @@ aliases:
 		<div class="col-sm-6">
 			<h2>Overview</h2>
 			<p>
-        Bruiser Conversions fully integrated LS3 engine conversion system for the Jeep JK/JKU Wrangler maintains the original equipment manufacturers (OEM) functionality of all vehicle systems that were supplied with your vehicle.  All systems that were functional prior to the conversion process will be functional after the conversion has been completed, this includes: instrument cluster, indicators, gauges, powertrain control systems, cruise control, hill descent mode, tip start, and tap shift. Our system retains the factory PCM and the Chrysler OBD II port.  Bruiser Conversions provides the only fully integrated LS3 engine conversion for the JK/JKU Wrangler.
+        Bruiser Conversions fully integrated LS3 engine conversion system for the Jeep JK/JKU Wrangler maintains the original equipment manufacturers (OEM) functionality of all vehicle systems that were supplied with your vehicle. All systems that were functional prior to the conversion process will be functional after the conversion has been completed, this includes: instrument cluster, indicators, gauges, powertrain control systems, cruise control, hill descent mode, tip start, and tap shift. Our system retains the factory PCM and the Chrysler OBD II port. Bruiser Conversions provides the only fully integrated LS3 engine conversion for the JK/JKU Wrangler.
 			</p>
 		</div>
   </div><!-- row -->
@@ -54,7 +54,7 @@ aliases:
 
       <h2>Transmission</h2>
       <p>
-The NAG-1 722.6/W5A580/WA580***, the factory automatic found in the 2012-2017 Jeep JK/JKU Wrangler, remains intact when installing the Bruiser Conversions LS3 engine.  This compact 5-speed automatic transmission is rated at 580 ft-lb torque input capacity.  It has been used in a wide range of vehicles including the Dodge Challenger, Chrysler 300 SRT8, Porsche, Mercedes-Benz Sprinter, Dodge Magnum SRT8, and the supercharged Jaguar X308.  A performance tuned TCM is provided with each engine conversion system.
+The NAG-1 722.6/W5A580/WA580***, the factory automatic found in the 2012-2017 Jeep JK/JKU Wrangler, remains intact when installing the Bruiser Conversions LS3 engine. This compact 5-speed automatic transmission is rated at 580 ft-lb torque input capacity. It has been used in a wide range of vehicles including the Dodge Challenger, Chrysler 300 SRT8, Porsche, Mercedes-Benz Sprinter, Dodge Magnum SRT8, and the supercharged Jaguar X308. A performance tuned TCM is provided with each engine conversion system.
       </p>
 
     
@@ -110,7 +110,7 @@ The NAG-1 722.6/W5A580/WA580***, the factory automatic found in the 2012-2017 Je
 
 		  
          <h2 class="m-b-2" style="text-align: left">2007 - 2011 Jeep JK/JKU Wrangler Specific Upgrades</h2>
-		  <div>Early model JK/JKU Wranglers equipped with an automatic transmission require an upgrade from the 42RLE.  Bruiser has elected to incorporate the NAG-1 722.6/W5A580/WA580*** in our conversion. This upgrade includes a transmission, torque converter, wiring harness, and a performance tuned TCM. Along with the upgraded transmission, a new center console and automatic transmission shifter assembly are provided.  This allows the driver access to the late-model tap shift option and updating the OEM software to include PRNDL display functionality on the OEM instrument cluster.  Cruise control and auto start features, if equipped, are retained after the conversion.</div><br>
+		  <div>Early model JK/JKU Wranglers equipped with an automatic transmission require an upgrade from the 42RLE. Bruiser has elected to incorporate the NAG-1 722.6/W5A580/WA580*** in our conversion. This upgrade includes a transmission, torque converter, wiring harness, and a performance tuned TCM. Along with the upgraded transmission, a new center console and automatic transmission shifter assembly are provided. This allows the driver access to the late-model tap shift option and updating the OEM software to include PRNDL display functionality on the OEM instrument cluster. Cruise control and auto start features, if equipped, are retained after the conversion.</div><br>
                <h2 class="m-b-2" style="text-align: left">Turn-Key Installation for 2007-11 JK/JKU, Automatic</h2>
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
@@ -204,7 +204,7 @@ The NAG-1 722.6/W5A580/WA580***, the factory automatic found in the 2012-2017 Je
           </tr>
         </table>
 		<div>
-		  Customers desiring a manual transmission with their conversion should submit their contact and vehicle information using the “<a href="/contact" target="_self">CONTACT US</a>” link below.</div><br>
+		  Customers desiring a manual transmission with their conversion should submit their contact and vehicle information using the "<a href="/contact" target="_self">CONTACT US</a>" link below.</div><br>
 		  <div>FOOTNOTES:</div>
 		  <div>*Horsepower rating @ 5800 RPM; Torque rating @ 4600 RPM</div>
 		  <div>**Horsepower rating @ 6000 RPM; Torque rating @ 6000 RPM</div>
