--- a/public/jeep-jl-conversion/index.html
+++ b/public/jeep-jl-conversion/index.html
@@ -99,14 +99,14 @@
 		<div class="col-sm-6">
 			<h2>Fully Integrated</h2>
 			<p>
-       Bruiser’s LS3 engine conversions system for the Jeep JL Wrangler maintains the original equipment manufacturers (OEM) functionality of all vehicle safety, comfort, and on-board diagnostic systems.  All instruments, indicators, gauges, and powertrain control systems will work in the same manner as they did when the vehicle rolled off the assembly line.  Cruise control, hill descent mode, tip start, and tap shift systems are fully integrated with the Bruiser LS3 engine conversion system.
+       Bruiser's LS3 engine conversions system for the Jeep JL Wrangler maintains the original equipment manufacturers (OEM) functionality of all vehicle safety, comfort, and on-board diagnostic systems.  All instruments, indicators, gauges, and powertrain control systems will work in the same manner as they did when the vehicle rolled off the assembly line.  Cruise control, hill descent mode, tip start, and tap shift systems are fully integrated with the Bruiser LS3 engine conversion system.
 
       </p>
 
      
       <h2>Transmission</h2>
       <p>
-        The ZF Torqueflite 8 automatic transmission, when equipped in the JL Wrangler, has a rated input torque capacity of 561 ft-lb.  This transmission has been in use across the MOPAR fleet behind the 5.7L and 6.4L Hemi engines and has a proven history of performance and durability.  Bruiser has engineered the necessary adapters to connect the Bruiser GM Performance LS3 engine conversion system with the factory installed 8-speed transmission; all transmission functions have been integrated with the Jeep’s OEM software and control systems.
+        The ZF Torqueflite 8 automatic transmission, when equipped in the JL Wrangler, has a rated input torque capacity of 561 ft-lb.  This transmission has been in use across the MOPAR fleet behind the 5.7L and 6.4L Hemi engines and has a proven history of performance and durability.  Bruiser has engineered the necessary adapters to connect the Bruiser GM Performance LS3 engine conversion system with the factory installed 8-speed transmission; all transmission functions have been integrated with the Jeep's OEM software and control systems.
       </p>
 
      
